--- a/index.html
+++ b/index.html
@@ -11,34 +11,38 @@
     <div id="questionnaire"></div>
 
     <script>
-        const questionsData = {
-            "Catégorie 1": [
-                "Question 1.1",
-                "Question 1.2",
-                "Question 1.3",
-                "Question 1.4",
-                "Question 1.5"
-            ],
-            "Catégorie 2": [
-                "Question 2.1",
-                "Question 2.2",
-                "Question 2.3",
-                "Question 2.4",
-                "Question 2.5"
-            ],
-            // Ajoute les autres catégories...
-        };
+        const SPREADSHEET_ID = '1wzk-VwsFr2r89nmlrybzYT1UDIJiuY-T';
+        const API_KEY = '731030945510-cte2g48lteras409vhsqs607km45bm09.apps.googleusercontent.com'; // Obtiens une clé API via Google Cloud Console
 
-        document.getElementById('generate').addEventListener('click', () => {
+        async function fetchQuestions() {
+            const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${SPREADSHEET_ID}/values/Sheet1?key=${API_KEY}`);
+            const data = await response.json();
+            return data.values.slice(0); 
+        }
+
+        document.getElementById('generate').addEventListener('click', async () => {
             const questionnaireDiv = document.getElementById('questionnaire');
             questionnaireDiv.innerHTML = ''; // Réinitialise le contenu
+            
+            const questions = await fetchQuestions();
+            const categories = {};
 
-            for (const category in questionsData) {
+            // Organise les questions par catégorie
+            questions.forEach(row => {
+                const category = row[0];
+                const question = row[1];
+                if (!categories[category]) {
+                    categories[category] = [];
+                }
+                categories[category].push(question);
+            });
+
+            // Génère le questionnaire
+            for (const category in categories) {
                 const categoryDiv = document.createElement('div');
                 categoryDiv.innerHTML = `<h2>${category}</h2>`;
                 
-                const questions = questionsData[category];
-                questions.forEach(question => {
+                categories[category].forEach(question => {
                     const questionLabel = document.createElement('label');
                     questionLabel.innerHTML = `${question} <input type="text" placeholder="Votre réponse..."><br>`;
                     categoryDiv.appendChild(questionLabel);
