--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questionnaire Automatique</title>
+    <title>Questionnaire automatique</title>
 </head>
 <body>
     <h1>Générateur de Questionnaire</h1>
@@ -30,7 +30,7 @@
             // Organise les questions par catégorie
             questions.forEach(row => {
                 const category = row[0];
-                const question = row[1];
+                const question = row[2];
                 if (!categories[category]) {
                     categories[category] = [];
                 }
