--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script>
         const SPREADSHEET_ID = '1wzk-VwsFr2r89nmlrybzYT1UDIJiuY-T';
-        const API_KEY = '731030945510-cte2g48lteras409vhsqs607km45bm09.apps.googleusercontent.com'; // Obtiens une clé API via Google Cloud Console
+        const API_KEY = 'AIzaSyAVZ2FwFoGeqCM_yHzv1q37ZZUkqed_MjE'; // Obtiens une clé API via Google Cloud Console
 
         async function fetchQuestions() {
             const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${SPREADSHEET_ID}/values/Sheet1?key=${API_KEY}`);
