--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Quiz</title>
+</head>
+<body>
+    <div id="quiz-container"></div>
+    <button id="submit">Soumettre</button>
+    <script src="script.js"></script>
+</body>
+</html>
